[project]
name = "mrms-radar-processor"
version = "0.1.0"
description = "MRMS GRIB2 processor and RALA generator for weather radar visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "metpy>=1.6.0",
    "numpy>=1.26.0",
    "xarray>=2023.10.0",
    "cfgrib>=0.9.10",
    "eccodes>=1.6.0",
    "aiohttp>=3.9.0",
    "pillow>=10.1.0",
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.17.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.5",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

